Various UI improvements.

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       content="Calculates attack roll target numbers for the BattleTech board game."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#f59e0b" />
+    <meta name="theme-color" content="#fbbf24" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
